webpack/stylesheets/_layout.scss
*, *:before, *:after {
  box-sizing: border-box;
}

html {
  background-color: var(--color-primary);
  color: #fff;
}

body {
  @include size-lock(padding-left, 5px, 30px);
  @include size-lock(padding-right, 5px, 30px);
}

h1, h2, h3, h4, h5, h6 {
  font-weight: 300;
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}

.grid {
  max-width: 60em;
  margin: 0 auto;
  display: grid;
  grid-template-columns: 1fr;
  @include size-lock(grid-row-gap, 20px, 30px);
  @include size-lock(grid-column-gap, 30px, 40px);

  grid-template-areas:
                      "header"
                      "nav"
                      "page-title"
                      "main"
                      "footer";

  @media (min-width: 576px) {
    grid-template-columns: 1fr 3fr;
    grid-template-areas:
                        "header  page-title"
                        "nav     main"
                        ".       main"
                        "footer  footer";
  }
}

.site-header {
  grid-area: header;
}

.site-nav {
  grid-area: nav;
  min-height: 400px;
  display: flex;
  flex-direction: column;
}

.site-main {
  grid-area: main;
}

.site-footer {
  grid-area: footer;
}

